--- a/docs/src/content/content.yml
+++ b/docs/src/content/content.yml
@@ -1,9 +1,11 @@
 map:
   - title
   - intro
+  - basis_of_n_qubits
   - hadamard_transform_recap
   - reflection_operator
   - problem_setup
+  - classical_approach
   - algorithm_summary
   - oracle
   - diffusion_operator
