--- a/docs/src/content/content.yml
+++ b/docs/src/content/content.yml
@@ -8,6 +8,7 @@ map:
   - classical_approach
   - algorithm_summary
   - oracle
+  - algorithm_continued
   - diffusion_operator
   - analysis
   - optimality
