--- a/docs/src/content/qubits/qubits.yml
+++ b/docs/src/content/qubits/qubits.yml
@@ -2,4 +2,5 @@ map:
   - qubits.md
   - superposition.md
   - entanglement.md
-  - transformation.md
+  - measurement.md
+  - transformation_and_gates.md
